@@ -55,3 +55,4 @@ EXPORTS
 	winx_list_insert_item
 	winx_list_remove_item
 	winx_list_destroy
+	winx_windows_in_safe_mode
